# nami

./: .gitignore  CONTRIBUTORS.md  README.md  build.py  install.sh  main.py  nami.service  pyproject.toml  requirements.txt  setup.py
backend/: cli.py  mpris.py  player.py  protocol.py  server.py
backend/database/: database.py  models.py
client/: client.py
scripts/: install-daemon.sh  uninstall-daemon.sh
