[project]
name = "nami"
version = "0.0.1"
description = "Nami Music Player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"python-vlc",
"tinydb",
"textual",
"cbor2",
"python-daemon",
"watchfiles",
"mutagen",
]


[tool.basedpyright]
typeCheckingMode = "basic"

# based pyright annoying warnings
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalCall = false
reportUnusedFunction = false
reportUnusedVariable = false
reportUndefinedVariable = false
